5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1798_2571.log
== TEST (2019-06-11 13:44:26) 
-- CODE:
n = input("leia a string: ")
j = ''
for i in range(len(x)):
	if(n[i].upper()!="A"):
		j = j + x[i]
	elif(n[i].upper=="A" ):
		j = j
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in range(len(x)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:44:38) 
-- CODE:
n = input("leia a string: ")
j = ''
for i in range(len(x)):
	if(n[i].upper()!="A"):
		j = j + x[i]
	elif(n[i].upper=="A" ):
		j = j
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in range(len(x)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 13:44:41) 
-- CODE:
n = input("leia a string: ")
j = ''
for i in range(len(x)):
	if(n[i].upper()!="A"):
		j = j + x[i]
	elif(n[i].upper=="A" ):
		j = j
print(j)
	
-- EXECUTION TIME:
0.72045
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2571/main.py", line 3, in <module>
    for i in range(len(x)):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:44:58) 
-- CODE:
n = input("leia a string: ")
j = ''
for i in range(len(x)):
	if(n[i].upper()!="A"):
		j = j + n[i]
	elif(n[i].upper=="A" ):
		j = j
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in range(len(x)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 13:45:02) 
-- CODE:
n = input("leia a string: ")
j = ''
for i in range(len(x)):
	if(n[i].upper()!="A"):
		j = j + n[i]
	elif(n[i].upper=="A" ):
		j = j
print(j)
	
-- EXECUTION TIME:
0.811488
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2571/main.py", line 3, in <module>
    for i in range(len(x)):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:45:17) 
-- CODE:
n = input("leia a string: ")
j =''
for i in range(len(n)):
	if(n[i].upper()!="A"):
		j = j + n[i]
	elif(n[i].upper=="A" ):
		j = j
print(j)
	
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 13:45:27) 
-- CODE:
n = input("leia a string: ")
j =''
for i in range(len(n)):
	if(n[i].upper()!="A"):
		j = j + n[i]
	elif(n[i].upper=="A" ):
		j = j
print(j)
	
-- EXECUTION TIME:
0.830146
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
